fix contrast issues and implement lazu loading

--- a/styles/index.css
+++ b/styles/index.css
@@ -96,11 +96,11 @@ h1, h2, h3, h4, h5, h6 {
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url('../images/heroInspiration.jpg'); /* replace with your image */
+  background-image: url('../images/christprayer.webp'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.25; /* adjust this for desired transparency */
+  opacity: 0.12; /* adjust this for desired transparency */
   z-index: 0;
 }
 
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn {
   padding: 0.8rem 1.5rem;
-  background-color: var(--color-primary);
+  background-color: var(--color-accent);
   color: var(--color-white);
   text-decoration: none;
   border-radius: 5px;
@@ -203,8 +203,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
-  background-color: var(--color-primary);
-  color: var(--color-white);
+  background-color: var(--color-background);
+  color: black;
 }
 
 /* Contact */
